minor refactoring, wording improved, show consent button for class only if consent missing

--- a/views/administration/classes_skipregistration.hbs
+++ b/views/administration/classes_skipregistration.hbs
@@ -11,7 +11,9 @@
     und zur <a href="{{@root.theme.documents.baseDir}}{{@root.theme.documents.termsOfUse}}"
         target="_blank">Nutzungsordnung</a> der {{@root.theme.short_title}} erklären. <br>
     Durch den Klick auf <i>"Einverständnis im Namen der Schüler erklären"</i> bestätigst du, dass du das Einverständnis
-    der Schüler bzw. deren Eltern auf anderem Wege erhalten hast. <br>
+    der Schüler bzw. deren Eltern auf anderem Wege erhalten hast.
+</p>
+<p>
     Auf der nächsten Seite erhältst du eine Bestätigung und hast die Möglichkeit, alle Startpasswörter zusammen mit
     einer Anleitung für deine Schüler auszudrucken.
 </p>
