1) new icon 2) remove readonly because Thomas said so 3) linter stuff

--- a/views/administration/students.hbs
+++ b/views/administration/students.hbs
@@ -34,7 +34,7 @@
                                     </span>
                                     <span>Alle Zustimmungen vorhanden</span>
                                 </div>
-                                <i class="fa fa-step-forward"></i>
+                                <i class="fa fa-check-square-o"></i>
                                 Einverständnis manuell erklären
                                 <div>
                             </center>
