small adjustments to credentials textarea

--- a/views/administration/users_registrationcomplete.hbs
+++ b/views/administration/users_registrationcomplete.hbs
@@ -83,10 +83,11 @@
                     <script>document.write(window.location.origin)</script></a>
                 und logge dich dort mit den folgenden Zugansdaten ein:</p>
         </div>
-        <textarea disabled class="printable form-control" style="resize: none; height: 80px">
-        {{fullname}}
-        E-Mail: {{email}}
-        Passwort: {{password}}</textarea>
+        <textarea disabled class="printable form-control" style="resize: none; height: 87px; overflow: none;">
+	{{fullname}}
+	E-Mail: {{email}}
+	Passwort: {{password}}
+		</textarea>
         {{/each}}
         <p class="noprint" style="margin-top: 1em">
             Beim ersten Login muss ein neues Passwort gewählt werden. Schüler,
