--- a/static/styles/administration/users.scss
+++ b/static/styles/administration/users.scss
@@ -24,3 +24,10 @@
         color: red;
     }
 }
+
+#skipRegistrationCredentials {
+	resize: none; 
+	height: 87px; 
+	overflow: hidden;
+	margin-bottom: 3px;
+}
