--- a/views/administration/users_registrationcomplete.hbs
+++ b/views/administration/users_registrationcomplete.hbs
@@ -83,7 +83,7 @@
                     <script>document.write(window.location.origin)</script></a>
                 und logge dich dort mit den folgenden Zugansdaten ein:</p>
         </div>
-        <textarea disabled class="printable form-control" style="resize: none; height: 87px; overflow: none;">
+        <textarea disabled class="printable form-control" id="skipRegistrationCredentials">
 	{{fullname}}
 	E-Mail: {{email}}
 	Passwort: {{password}}
