Vorträge des 3. HPI Schul-Cloud-Forums verlinkt

--- a/views/about/about.hbs
+++ b/views/about/about.hbs
@@ -306,6 +306,8 @@
                     2017)</a></li>
                 <li><a href="https://www.tele-task.de/series/1196/" target="_blank">Vorträge des 2. HPI Schul-Cloud-Forums (März
                     2018)</a></li>
+				<li><a href="https://www.tele-task.de/series/1251/" target="_blank">Vorträge des 3. HPI Schul-Cloud-Forums (März
+                    2019)</a></li>
             </ul>
             </div>
             {{/content}}
