--- a/views/authentication/forms/login.hbs
+++ b/views/authentication/forms/login.hbs
@@ -24,7 +24,7 @@
                             {{#each schools}}
                                 <option value="{{this._id}}">{{this.name}}</option>
 							{{else}}
-								<option disabled>Keine anderen Schulen verfügbar</option>
+								<option disabled>Keine Schulen verfügbar</option>
                             {{/each}}
                         </select>
                     </div>
