update help articles + small style fixes

--- a/static/styles/help/help.scss
+++ b/static/styles/help/help.scss
@@ -171,7 +171,7 @@ fieldset.switch_wrapper {
       font-size: 1.2em;
       box-sizing: border-box;
 
-      h5 {
+      .collapsable-headline{
         display: inline;
         padding-left: 8px;
         font-size: inherit;
