Cleaned first line of Impressum
removed "KOPIE - TODO: REMOVE !!!"

--- a/theme/open/views/imprint/imprint.hbs
+++ b/theme/open/views/imprint/imprint.hbs
@@ -1,5 +1,5 @@
 <div class="section-imprint">
-	<h1>KOPIE - TODO: REMOVE !!!</h1>
+	<h1>Impressum</h1>
 	<h5>
 		<strong>HPI Schul-Cloud &ndash; Hasso-Plattner-Institut f&uuml;r Digital Engineering gGmbH</strong>
 	</h5>
