--- a/views/administration/forms/form-start-school-year.hbs
+++ b/views/administration/forms/form-start-school-year.hbs
@@ -1,1 +1,1 @@
-<p>Das neue Schuljahr xxxx/xx wird eingeläutet. Dadurch können wieder Kurse und Klassen im neuen Schuljahr xxxx/xx erstellt werden.</p>
+<p>Das neue Schuljahr {{schoolMaintanance.nextYear.name}} wird eingeläutet. Dadurch können wieder Kurse und Klassen im neuen Schuljahr {{schoolMaintanance.nextYear.name}} erstellt werden.</p>
