--- a/views/authentication/home.hbs
+++ b/views/authentication/home.hbs
@@ -82,7 +82,7 @@
                 <img alt="" width="150px" style="grid-area: c; object-fit: contain; margin: 0 auto" src="/images/login-right.png"/>
                 <div style="grid-area: d; margin: 0 auto;" class="grid-align-right content-width-max">
                     <h2 class="h3 section-title">Ansatzpunkte der <span style="white-space: nowrap;">HPI Schul-Cloud</span></h2>
-                    <p>Die Nutzung digitaler Medien und Lernmethoden stellt viele Schulen noch vor große Herausforderungen: veraltete Hard- sowie Software im abgeschlossenen Computerraum, fächverbindender Einsatz kaum möglich uvm.</p>
+                    <p>Die Nutzung digitaler Medien und Lernmethoden stellt viele Schulen noch vor große Herausforderungen: veraltete Hard- sowie Software im abgeschlossenen Computerraum, fächerverbindender Einsatz kaum möglich uvm.</p>
                 </div>
             {{/content}}
         {{/embed}}
