SC-1624 linter and footer

--- a/views/lib/extended_footer.hbs
+++ b/views/lib/extended_footer.hbs
@@ -17,6 +17,7 @@
 				<h2 class="h4">Links</h2>
 				<ul>
 					<li><a href="/impressum">Impressum</a></li>
+					<li><a href="/datenschutz">Datenschutz</a></li>
 					<li>Datenschutzerklärung: <a href="/impressum#data_security">HPI</a> / <a
 							href="{{@root.theme.documents.baseDir}}{{@root.theme.documents.privacy}}" target="_blank">Muster
 							Schulen</a></li>
