--- a/views/lib/footer.hbs
+++ b/views/lib/footer.hbs
@@ -7,6 +7,8 @@
             <div>
                 <a href="/impressum" target="_blank">Impressum</a>
                 <span> - </span>
+                <a href="/datenschutz" target="_blank">Datenschutz</a>
+                <span> - </span>
                 Datenschutzerklärung: <a href="/impressum#data_security" target="_blank" rel="noopener">HPI</a> / <a href="{{@root.theme.documents.baseDir}}{{@root.theme.documents.privacy}}" target="_blank" rel="noopener">Muster Schulen</a>
                 <span> - </span>
                 <a href="mailto:info@schul-cloud.org?subject=Schul_Cloud%20Anfrage" target="_blank" rel="noopener">Kontakt</a>
