--- a/views/lib/extended_footer.hbs
+++ b/views/lib/extended_footer.hbs
@@ -17,9 +17,8 @@
 				<h2 class="h4">Links</h2>
 				<ul>
 					<li><a href="/impressum">Impressum</a></li>
-					<li><a href="/datenschutz">Datenschutz</a></li>
-					<li>Datenschutzerklärung: <a href="/impressum#data_security">HPI</a> / <a
-							href="{{@root.theme.documents.baseDir}}{{@root.theme.documents.privacy}}" target="_blank">Muster
+					<li>Datenschutzerklärung: <a href="/datenschutz">HPI</a> / <a
+							href="{{@root.theme.documents.baseDir}}{{@root.theme.documents.privacy}}" target="_blank" rel="noopener">Muster
 							Schulen</a></li>
 					<li><a href="/team">Team</a></li>
 					<li><a href="/partner">Partner</a></li>
