BRB-9 imprint/privacy split and footer

--- a/theme/brb/views/lib/footer.hbs
+++ b/theme/brb/views/lib/footer.hbs
@@ -5,11 +5,11 @@
 			<span>&copy; 2019 {{theme.short_title}} </span>
 
 			<div>
-				<a href="/impressum" target="_blank">Impressum</a>
+				<a href="/impressum">Impressum</a>
 				<span> - </span>
-				<a href="/impressum#data_security" target="_blank">Datenschutzerklärung</a>
+				<a href="/datenschutz">Datenschutzerklärung</a>
 				<span> - </span>
-				<a href="https://github.com/schul-cloud/" target="_blank">GitHub</a>
+				<a href="https://github.com/schul-cloud/" target="_blank" rel="noopener">GitHub</a>
 			</div>
 			<div>
 				<p class="made-with-love">Made with <span class="heart">❤</span> in Potsdam</p>
