--- a/theme/open/views/lib/extended_footer.hbs
+++ b/theme/open/views/lib/extended_footer.hbs
@@ -14,7 +14,7 @@
 				<h4>Links</h4>
 				<ul>
 					<li><a href="/impressum">Impressum</a></li>
-					<li><a href="/impressum#data_security">Datenschutzerklärung</a></li>
+					<li><a href="/datenschutz">Datenschutzerklärung</a></li>
 					<li><a href="https://github.com/schul-cloud/" target="_blank" rel="noopener">GitHub</a></li>
 				</ul>
 			</div>
@@ -22,7 +22,7 @@
 				<h4>Mobile App</h4>
 				<div class="android-app">
 					<a
-						href='https://play.google.com/store/apps/details?id=org.schulcloud.mobile&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
+						href='https://play.google.com/store/apps/details?id=org.schulcloud.mobile&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1' target="_blank" rel="noopener">
 						<img alt='Jetzt bei Google Play'
 							src='https://play.google.com/intl/en_us/badges/images/generic/de_badge_web_generic.png' height="70" />
 					</a>
