NC-256 imprint/privacy split + footer

--- a/theme/n21/views/lib/extended_footer.hbs
+++ b/theme/n21/views/lib/extended_footer.hbs
@@ -12,6 +12,7 @@
                 <h4>Links</h4>
                 <ul>
                     <li><a href="/impressum">Impressum</a></li>
+                    <li><a href="/datenschutz">Datenschutz</a></li>
                     <li><a href="https://github.com/schul-cloud/" target="_blank" rel="noopener">GitHub</a></li>
                 </ul>
             </div>
