--- a/theme/n21/views/lib/footer.hbs
+++ b/theme/n21/views/lib/footer.hbs
@@ -4,7 +4,9 @@
             <a>&copy; 2018 </a>
 
             <div>
-                <a href="/impressum">Impressum & Datenschutzerklärung</a>
+                <a href="/impressum">Impressum</a>
+				<span> - </span>
+				<a href="/datenschutz">Datenschutz</a>
             </div>
         </div>
     </div>
