--- a/theme/open/style.scss
+++ b/theme/open/style.scss
@@ -12,3 +12,8 @@ $colorDarkerGrey: #555555;
 $colorWhite: #fff;
 
 $logoBackground: url("../../images/logo/cloud-transparent-mono.svg") no-repeat center;
+
+.section-imprint.loggedout ul {
+	list-style-type: none!important;
+	margin: 0!important;
+}
